[gd_scene load_steps=8 format=3 uid="uid://dqkdlosl8a34d"]

[ext_resource type="Texture2D" uid="uid://u4wawey5eeay" path="res://Assets/items/big_shot.png" id="1_btogu"]
[ext_resource type="Script" uid="uid://dhihlahmek37e" path="res://Scenes/item.gd" id="1_tnst4"]
[ext_resource type="Texture2D" uid="uid://cv1rethrt15vp" path="res://Assets/items/wide_shot.png" id="2_tnst4"]
[ext_resource type="Texture2D" uid="uid://c3wb4rmivpg3g" path="res://Assets/items/add_shot.png" id="3_renmp"]
[ext_resource type="Texture2D" uid="uid://t4m8qcivmk2m" path="res://Assets/items/fast_shot.png" id="4_66iod"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmixh"]
size = Vector2(122, 74)

[sub_resource type="CircleShape2D" id="CircleShape2D_detector"]
radius = 82.006096

[node name="Item" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 4
script = ExtResource("1_tnst4")

[node name="WallCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jmixh")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_detector")

[node name="big_shot" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.24)
texture = ExtResource("1_btogu")

[node name="wide_shot" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.24)
texture = ExtResource("2_tnst4")

[node name="add_shot" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.24)
texture = ExtResource("3_renmp")

[node name="fast_shot" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.24)
texture = ExtResource("4_66iod")
